# pysodafair

./: pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
pysoda/core/dataset_generation/: __init__.py  upload.py
pysoda/core/dataset_generation/manifestSession/: manifest_session.py
pysoda/core/metadata/: code_description.py  dataset_description.py  helpers.py  performances.py  resources.py  samples.py  sites.py  subjects.py
pysoda/core/metadata_templates/: dataset_description.xlsx
pysoda/core/pysoda/: soda_object.py
pysoda/schema/: code_description.json  manifest.json  performances.json  resources.json  samples.json  subjects.json  submission_schema.json
pysoda/utils/: __init__.py  exceptions.py  metadata_utils.py  pennsieveAgentUtils.py  schema_validation.py  upload_utils.py
