[tool.poetry]
name = "pysodafair"
version = "0.1.72"
description = "Pysoda package for Fairdataihub tools"
authors = ["Christopher Marroquin <cmarroquin@calmi2.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fairdataihub/pysodafair"
repository = "https://github.com/fairdataihub/pysodafair"
packages = [
    { include = "pysoda" }
]
include = [
    "pysoda/core/metadata_templates/*",
    "pysoda/core/metadata_templates/*.xlsx",
    "pysoda/schema/*.json"
]

[tool.poetry.dependencies]
python = ">=3.9"
openpyxl = "*"


[build-system]
requires = ["poetry-core", "poetry==2.2.1"]
build-backend = "poetry.core.masonry.api"